cursive-bootstrap/tests/ui/E-MOD/E-MOD-1307.cursive
// RUN: compile-fail
// DIAG: E-MOD-1307
// SPEC: 5.1
// DESC: Ambiguous method resolution; disambiguation required

class Drawable {
    procedure draw(~) -> ()
}

class Printable {
    procedure draw(~) -> ()
}

record Shape <: Drawable, Printable {
    procedure draw(~) -> () { }
}




public procedure main(move ctx: Context) -> i32 {
    let s: Shape = Shape{}
    s ~> draw() //~ ERROR E-MOD-1307
    return 0
}


